# python

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  download_input.py  download_instructions.py  encode_aoc_session.py  fib.py  pyproject.toml  quick_test.py  submit_answer.py  test  test_aoc_session.py  test_download.py
.github/workflows/: ci-lite.yml
advent/: advent_d3.py  advent_d4.py
advent2015/: README.md
advent2015/Day1/: d1_instructions.html  d1_instructions.md  day1.py  day1_part2.py  test_example.py
advent2015/Day10/: d10_instructions.html  d10_instructions.md  day10.py  day10_part2.py  test_example.py
advent2015/Day11/: d11_instructions.html  d11_instructions.md  day11.py  day11_part2.py  test_example.py
advent2015/Day12/: d12_instructions.html  d12_instructions.md  day12.py  day12_part2.py  test_example.py
advent2015/Day13/: d13_instructions.html  d13_instructions.md  day13.py  day13_part2.py  test_example.py
advent2015/Day14/: d14_instructions.html  d14_instructions.md  day14.py  day14_part2.py  test_example.py
advent2015/Day15/: d15_instructions.html  d15_instructions.md  day15.py  day15_part2.py  test_example.py
advent2015/Day16/: d16_instructions.html  d16_instructions.md  day16.py  day16_part2.py  test_example.py
advent2015/Day17/: d17_instructions.html  d17_instructions.md  day17.py  day17_part2.py  test_example.py
advent2015/Day18/: d18_instructions.html  d18_instructions.md  day18.py  day18_part2.py  test_example.py
advent2015/Day19/: d19_instructions.html  d19_instructions.md  day19.py  day19_part2.py  test_example.py
advent2015/Day2/: d2_instructions.html  d2_instructions.md  day2.py  day2_part2.py  test_example.py
advent2015/Day20/: d20_instructions.html  d20_instructions.md  day20.py  day20_part2.py  test_example.py
advent2015/Day21/: d21_instructions.html  d21_instructions.md  day21.py  day21_part2.py  test_example.py
advent2015/Day22/: d22_instructions.html  d22_instructions.md  day22.py  day22_part2.py  test_example.py
advent2015/Day23/: d23_instructions.html  d23_instructions.md  day23.py  day23_part2.py  test_example.py
advent2015/Day24/: d24_instructions.html  d24_instructions.md  day24.py  day24_part2.py  test_example.py
advent2015/Day25/: d25_instructions.html  d25_instructions.md  day25.py  day25_part2.py  test_example.py
advent2015/Day3/: d3_instructions.html  d3_instructions.md  day3.py  day3_part2.py  test_example.py
advent2015/Day4/: d4_instructions.html  d4_instructions.md  day4.py  day4_part2.py  test_example.py
advent2015/Day5/: d5_instructions.html  d5_instructions.md  day5.py  day5_part2.py  test_example.py
advent2015/Day6/: d6_instructions.html  d6_instructions.md  day6.py  day6_part2.py  test_example.py
advent2015/Day7/: d7_instructions.html  d7_instructions.md  day7.py  day7_part2.py  test_example.py
advent2015/Day8/: d8_instructions.html  (+4 more)
advent2016/: README.md  assembunny.py
advent2017/: README.md  knot.py
advent2017/extras/cxx/: CMakeLists.txt  README.md
advent2017/extras/cxx/include/: engine.hpp
advent2017/extras/cxx/src/: engine.cpp  main.cpp
advent2017/extras/cxx/src/days/: day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
advent2018/: README.md
advent2019/: README.md  __init__.py  intcode.py
advent2020/: README.md
advent2021/: README.md
advent2022/: README.md
advent2023/: README.md
advent2024/: README.md
advent2025/: .gitignore  README.md  hello.py  requirements.txt
aoclib/: README.md  __init__.py  __main__.py  auth.py  cli.py  geometry.py  grid.py  http.py  intervals.py  parsing.py  runner.py  search.py  year.py
class4/: sqrt.py
docs/: ARCHITECTURE.md  CHANGELOG.md  MAINTENANCE.md  ORIGINALITY_CHECK.md
sorts/: bubble.py  factorial.py  insertion.py  selection.py
tools/: README.md  VERIFICATION_REPORT.md  __init__.py  accepted_answers.json  audit_aoc.py  download_input.py  download_instructions.py  encode_aoc_session.py  export_instructions_markdown.py  lint_aoc_style.py  new_day.py  new_year.py  quick_test.py  submit_answer.py  test_aoc_session.py  test_download.py  update_accepted_answers.py  verify_all.py
(+1298 files in other folders)
