cmake_minimum_required(VERSION 3.16)
project(aoc2017x_cpp LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

# Aggressive optimization profile for benchmark binaries.
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
  add_compile_options(
    -O3
    -march=native
    -mtune=native
    -fno-plt
    -ffast-math
    -fomit-frame-pointer
  )
  add_link_options(-O3)
elseif(MSVC)
  add_compile_options(/O2 /GL)
  add_link_options(/LTCG)
endif()

include(CheckIPOSupported)
check_ipo_supported(RESULT IPO_OK OUTPUT IPO_ERR)
if(IPO_OK)
  set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()

find_package(OpenSSL REQUIRED)
add_library(engine src/engine.cpp)
target_include_directories(engine PUBLIC include)
target_link_libraries(engine PUBLIC OpenSSL::Crypto)
add_executable(day01 src/days/day01.cpp)
target_link_libraries(day01 PRIVATE engine OpenSSL::Crypto)
add_executable(day02 src/days/day02.cpp)
target_link_libraries(day02 PRIVATE engine OpenSSL::Crypto)
add_executable(day03 src/days/day03.cpp)
target_link_libraries(day03 PRIVATE engine OpenSSL::Crypto)
add_executable(day04 src/days/day04.cpp)
target_link_libraries(day04 PRIVATE engine OpenSSL::Crypto)
add_executable(day05 src/days/day05.cpp)
target_link_libraries(day05 PRIVATE engine OpenSSL::Crypto)
add_executable(day06 src/days/day06.cpp)
target_link_libraries(day06 PRIVATE engine OpenSSL::Crypto)
add_executable(day07 src/days/day07.cpp)
target_link_libraries(day07 PRIVATE engine OpenSSL::Crypto)
add_executable(day08 src/days/day08.cpp)
target_link_libraries(day08 PRIVATE engine OpenSSL::Crypto)
add_executable(day09 src/days/day09.cpp)
target_link_libraries(day09 PRIVATE engine OpenSSL::Crypto)
add_executable(day10 src/days/day10.cpp)
target_link_libraries(day10 PRIVATE engine OpenSSL::Crypto)
add_executable(day11 src/days/day11.cpp)
target_link_libraries(day11 PRIVATE engine OpenSSL::Crypto)
add_executable(day12 src/days/day12.cpp)
target_link_libraries(day12 PRIVATE engine OpenSSL::Crypto)
add_executable(day13 src/days/day13.cpp)
target_link_libraries(day13 PRIVATE engine OpenSSL::Crypto)
add_executable(day14 src/days/day14.cpp)
target_link_libraries(day14 PRIVATE engine OpenSSL::Crypto)
add_executable(day15 src/days/day15.cpp)
target_link_libraries(day15 PRIVATE engine OpenSSL::Crypto)
add_executable(day16 src/days/day16.cpp)
target_link_libraries(day16 PRIVATE engine OpenSSL::Crypto)
add_executable(day17 src/days/day17.cpp)
target_link_libraries(day17 PRIVATE engine OpenSSL::Crypto)
add_executable(day18 src/days/day18.cpp)
target_link_libraries(day18 PRIVATE engine OpenSSL::Crypto)
add_executable(day19 src/days/day19.cpp)
target_link_libraries(day19 PRIVATE engine OpenSSL::Crypto)
add_executable(day20 src/days/day20.cpp)
target_link_libraries(day20 PRIVATE engine OpenSSL::Crypto)
add_executable(day21 src/days/day21.cpp)
target_link_libraries(day21 PRIVATE engine OpenSSL::Crypto)
add_executable(day22 src/days/day22.cpp)
target_link_libraries(day22 PRIVATE engine OpenSSL::Crypto)
add_executable(day23 src/days/day23.cpp)
target_link_libraries(day23 PRIVATE engine OpenSSL::Crypto)
add_executable(day24 src/days/day24.cpp)
target_link_libraries(day24 PRIVATE engine OpenSSL::Crypto)
add_executable(day25 src/days/day25.cpp)
target_link_libraries(day25 PRIVATE engine OpenSSL::Crypto)
